# seedxor

./: .gitignore  Cargo.toml  LICENSE  README.md
.ci/: Jenkinsfile  build.sh
src/: lib.rs  main.rs
