[package]
name = "seedxor"
version = "1.0.0"
edition = "2021"
authors = ["moparisthebest <admin@moparisthebest.com>", "KaiWitt <kaiwitt@protonmail.com>"]
description = "XOR bip39 mnemonics."
readme = "README.md"
repository = "https://github.com/moparisthebest/seedxor"
license = "MIT"
keywords = ["bitcoin", "seed", "mnemonic", "bip39", "xor"]
categories = ["cryptography::cryptocurrencies"]
publish = true

include = [
    "**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]

[dependencies]
bip39     = { version = "2.0", default-features = false }
getrandom = { version = "0.2", default-features = false }
